# myurlshortener

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build-frontend.sh  config.json  pom.xml  test_api.sh
.github/ISSUE_TEMPLATE/: migration-job.md
.github/workflows/: ci.yml  deploy.yml
db/migrations/: 001_init.sql  002_auth_and_users.sql
docs/: architecture.mmd  architecture_java.mmd  migration-plan.md  sequence.mmd
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Account.jsx  Auth.jsx  Dashboard.jsx  LinkList.jsx  (+2 more)
infra/: dependencies.tf  ingress.tf  main.tf  providers.tf  variables.tf
k8s/: README.md  cluster-issuer-prod.yaml  cluster-issuer.yaml  deploy-aks.sh  deploy-app.sh  deploy-infra.sh  deploy-kind.sh  deployment.yaml  ingress.yaml  nginx-config.yaml  nginx-deployment.yaml  nginx-service.yaml  redis-config.yaml  service-nodeport.yaml  service.yaml
k8s/monitoring/: dashboard-app.json  grafana-dashboard-provider-cm.yaml  grafana-dashboards-json-cm.yaml  grafana-datasource.yaml  grafana.yaml  postgres-exporter.yaml  prometheus.yaml
legacy_cpp/src/: UrlShortenerService.cpp
public/: index.html
scripts/: api_test_suite.py  auth_api_tests.sh  init_local_pg.sql
src/: UrlShortenerService.cpp  UrlShortenerService.h  db.cpp  db.h  main.cpp  utils.cpp  utils.h
src/controllers/: AuthController.h
src/security/: PasswordHasher.h
src/services/: AuthService.cpp  AuthService.h  DataStore.cpp  DataStore.h  ServiceError.h
(+40 files in other folders)
